--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button, .load-label {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -59,14 +59,17 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:hover, .load-label:hover {
   border-color: #646cff;
 }
 button:focus,
-button:focus-visible {
+button:focus-visible, .load-label:focus, .load-label:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.load-label {
+  background-color: #fafafa;
+}
 .card {
   padding: 2em;
 }
